<resources>

    <string name="app_name">MobiBand_buffer</string>
    <string name="hello_world">MobiPerf Bandwidth Probing using Packet Train</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_mobi_band">MobiBand_buffers</string>
    <string name="hostLabel">Hostname/IP</string>
    <string name="hostText">owl.eecs.umich.edu</string>
    <string name="portLabel">Port #</string>
    <string name="portText">10100</string>
    <string name="pktSizeLabel">Packet Size</string>
    <string name="pktSizeText">724</string>
    <string name="pktSizeUnit">B</string>
    <string name="totalNumPktLabel">Total number of Packet</string>
    <string name="totalNumPktText">50</string>
    <string name="gapLabel">    Gap</string>
    <string name="gapText">0.3</string>
    <string name="gapUnit">ms</string>
    <string name="startButtonText">Start</string>
    <string name="bandwidthReasult"></string>
    <string name="autoButtonText">Auto</string>

</resources>